CRUD+SpringSecurity (jwt)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #Server configuration
 server.servlet.context-path=/DariTn
 server.port=8081
+### secret key  used to size a token
+app.jwt.secret=daritnESPRIT2022 
