--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 server.servlet.context-path=/DariTn
 server.port=8081
 ### secret key  used to size a token
-app.jwt.secret=daritnESPRIT2022 
+jwt.secret=secretkey123 
