--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.3</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<version>2.6.6</version>
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>tn.esprit.spring</groupId>
-	<artifactId>dari-spring-boot</artifactId>
+	<groupId>tn.darib.spring</groupId>
+	<artifactId>dari-tn-b-1</artifactId>
 	<version>1.0</version>
-	<name>dari-spring-boot</name>
-	<description>dari-spring-boot</description>
+	<name>dari-tn-b-1</name>
+	<description>dari</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
@@ -22,11 +21,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter </artifactId>
+            <version>3.0.0 </version>
+         </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -44,21 +47,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
 
-		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-boot-starter </artifactId>
-			<version>3.0.0 </version>
-		</dependency>
-		
+       </dependency>
 	</dependencies>
-
 
 	<build>
 		<plugins>
