--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,25 @@
-
+server.servlet.context-path=/SpringMVC
+server.port=8081
 ### DATABASE ###
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/dariTn?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/dariTn?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTCBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#Server configuration
-server.servlet.context-path=/DariTn
-server.port=8081
+
+#logging configuration
+# Spécifier le fichier externe ou les messages sont stockés
+logging.file.name=C:\springlogs\spring_log_file.log 
+# Spécifier la taille maximale du fichier de journalisation
+logging.file.max-size= 100KB
+# spécifier le niveau de Log
+logging.level.root=INFO 
+# Spécifier la forme du message
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{36} - %msg%n
+spring.batch.initialize-schema=ALWAYS
+
+
+
