--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,14 @@ server.port=8081
 ### secret key  used to size a token
 jwtSecret=secretkey123 
 jwtExpirationMs=86400000
+### Email config ###
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hiba.farhat.fh@gmail.com
+spring.mail.password=hiba.712998H
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=
+###CORS###
+spring.profiles.active=development
+
 
