--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 ### DATABASE ###
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/dariTn?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
@@ -11,3 +10,15 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #Server configuration
 server.servlet.context-path=/DariTn
 server.port=8081
+### secret key  used to size a token
+jwtSecret=secretkey123 
+jwtExpirationMs=86400000
+### Email config ###
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hiba.farhat.fh@gmail.com
+spring.mail.password=hiba.712998H
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=
+###CORS###
+spring.profiles.active=development
