forgot+update Password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,14 +13,8 @@ server.port=8081
 ### secret key  used to size a token
 jwtSecret=secretkey123 
 jwtExpirationMs=86400000
-### Email config ###
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=hiba.farhat.fh@gmail.com
-spring.mail.password=tlyl dnxq itty qrsw
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
 ###CORS###
 spring.profiles.active=development
 #####SocialLogin#####
 google.id=947770575510-d7tlf1akkns5h1gairb5e6r2i2csn72u.apps.googleusercontent.com
+secretPsw=kjdslkfjklsdflkjsdklflsk
