--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,9 @@ logging.level.root=INFO
 # Spécifier la forme du message
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{36} - %msg%n
 spring.batch.initialize-schema=ALWAYS
-
+#twilio:
+  #account_sid: AC623eab300e4fb83165a966ce6ad5e9f0
+  #auth_token: d1b214e53f656ef5b76db373f0f929da
+ # from_number: "+18507714598"
 
 
