--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
 		<version>2.6.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+	
+
+	
 	<groupId>com.prospace.spring</groupId>
 	<artifactId>prospace-project</artifactId>
 	<version>1.0</version>
@@ -17,7 +20,18 @@
 		<java.version>1.8</java.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
+	
 	<dependencies>
+	
+		<dependency>
+		  <groupId>com.twilio.sdk</groupId>
+		  <artifactId>twilio</artifactId>
+		  <version>8.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -70,6 +84,7 @@
 			<artifactId>springfox-boot-starter </artifactId>
 			<version>3.0.0 </version>
 		</dependency>
+		
 
 	</dependencies>
 
