--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,17 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #Server configuration
 server.servlet.context-path=/DariTn
 server.port=8081
+
+# THYMELEAF (ThymeleafAutoConfiguration)
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.excluded-view-names=# comma-separated list of view names   that should be excluded from resolution
+spring.thymeleaf.view-names=# comma-separated list of view names that can be resolved
+spring.thymeleaf.suffix=.html
+#spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.content-type=text/html # ;charset=<encoding> is added
+spring.thymeleaf.cache=true
+spring.thymeleaf.mode=LEGACYHTML5
+#spring serialization beans
+spring.jackson.serialization.fail-on-empty-beans=false
