--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
             <artifactId>lombok</artifactId>
 
        </dependency>
+       <dependency>
+          <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>20.41.0</version>
+</dependency>
 	</dependencies>
 
 	<build>
